# codesim

./: DOCUMENTATION.md  LICENSE  README.md  pyproject.toml
src/codesim/: __init__.py  cli.py  compare.py  fingerprint.py  languages.py  normalize.py  parser.py
